# backseat-driver

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: cd.yaml  ci.yaml
backseat_driver/: __init__.py  backseat_driver.py
tests/: __init__.py  test_backseat_driver.py
tests/fixtures/: sample_model_prediction.json  sample_source_file.py
