[metadata]
name = backseat-driver
version = attr: backseat_driver.__version__
author = Leo Kosta
author_email = kostaleonard@gmail.com
description = A tool for large language model-enabled code review.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kostaleonard/backseat-driver
project_urls =
    Bug Tracker = https://github.com/kostaleonard/backseat-driver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openai

[options.packages.find]
include = backseat_driver*

[options.entry_points]
console_scripts =
    backseat-driver = backseat_driver.backseat_driver:main
